<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.0.M3</version>
		<relativePath />
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ht.ussp</groupId>
	<artifactId>ussp-gateway-app</artifactId>
	<version>1.0-SNAPSHOT</version>

	<name>统一服务网关</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<start-class>com.ht.ussp.gateway.app.GatewayApplication</start-class>
		<maven.deploy.skip>true</maven.deploy.skip>
		<docker.image.prefix>ussp</docker.image.prefix>

		<docker-maven-plugin.version>1.0.0</docker-maven-plugin.version>
		<docker.java.base.image>frolvlad/alpine-oraclejdk8:slim</docker.java.base.image>
		<docker.repostory>172.16.200.101</docker.repostory>
		<docker.registry.name>ht</docker.registry.name>
		<docker.maintainer>xiayutai@hongte.info</docker.maintainer>

		<git-commit-id-plugin.version>2.2.4</git-commit-id-plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-zuul</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.retry</groupId>
			<artifactId>spring-retry</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-eureka</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-bus-amqp</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-feign</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-tomcat</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-undertow</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>fastjson</artifactId>
			<version>1.2.46</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- log -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion><!-- 去除默认配置 -->
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<dependency>  <!-- 支持识别yml配置 -->
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-web</artifactId>
		</dependency>


		<dependency>
			<groupId>com.ht.ussp</groupId>
			<artifactId>ussp-common</artifactId>
			<version>2018052901</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>Finchley.M2</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>ussp-gateway-app</finalName>
		<plugins>
			<!-- Spring Boot的编译插件（选择了 JRE 版本） -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
			</plugin>

			<!-- Docker maven plugin -->
			<plugin>
				<groupId>com.spotify</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>${docker-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>deploy</phase>
						<goals>
							<goal>build</goal>
						</goals>
						<configuration>
							<imageName>${docker.repostory}/${docker.registry.name}/${project.artifactId}:${git.branch}</imageName>
						</configuration>
					</execution>
					<execution>
						<id>push-image</id>
						<phase>deploy</phase>
						<goals>
							<goal>push</goal>
						</goals>
						<configuration>
							<imageName>${docker.repostory}/${docker.registry.name}/${project.artifactId}:${git.branch}</imageName>
						</configuration>
					</execution>
					<execution>
						<id>push-latest-image</id>
						<phase>deploy</phase>
						<goals>
							<goal>push</goal>
						</goals>
						<configuration>
							<imageName>${docker.repostory}/${docker.registry.name}/${project.artifactId}:latest</imageName>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<serverId>docker-ht</serverId>
					<registryUrl>http://${docker.repostory}</registryUrl>
					<!--如果<pushImage>false</pushImage>则install阶段将不提交Docker镜像，只有maven的deploy阶段才提交。 -->
					<pushImage>false</pushImage>
					<image>${docker.registry.name}/${project.artifactId}:${git.branch}</image>
					<newName>${docker.repostory}/${docker.registry.name}/${project.artifactId}:${git.branch}</newName>
					<imageTags>
						<!--可以指定多个标签 -->
						<imageTag>latest</imageTag>
					</imageTags>
					<!--覆盖已存在的标签 镜像 -->
					<latestforceTags>true</latestforceTags>
					<baseImage>${docker.java.base.image}</baseImage>
					<maintainer>${docker.maintainer}</maintainer>
					<cmd></cmd>
					<env>
						<TZ>Asia/Shanghai</TZ>
						<JAVA_OPTS>-Xms3g -Xmx3g -Xss256K -XX:+UseG1GC \
							-XX:MaxGCPauseMillis=200 -XX:InitiatingHeapOccupancyPercent=45 \
							-XX:+PrintGCDetails -XX:+PrintGCDateStamps \
							-XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/logs \ 
							-Xloggc:/logs/ussp_gateway_gc.log</JAVA_OPTS>
					</env>
					<!--<entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint> -->
					<entryPoint>[ "sh", "-c", "java $JAVA_OPTS
						-Djava.security.egd=file:/dev/./urandom -Dfile.encoding=UTF-8
						-Duser.timeZone=GMT+08 -Dcom.sun.management.jmxremote.port=8999
						-Dcom.sun.management.jmxremote.authenticate=false
						-Djava.rmi.server.hostname=172.16.200.110 -jar
						${project.build.finalName}.jar" ]</entryPoint>
					<resources>
						<resource>
							<directory>${project.build.directory}</directory>
							<include>${project.build.finalName}.jar</include>
						</resource>
					</resources>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<repositories>
		<repository>
			<id>maven-public</id>
			<name>maven-public</name>
			<url>http://172.16.200.111:8081/repository/maven-public/</url>
			<layout>default</layout>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>maven-public</id>
			<name>maven-public</name>
			<url>http://172.16.200.111:8081/repository/maven-public/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<distributionManagement>
		<repository>
			<id>nexus-releases</id>
			<name>releases</name>
			<url>http://172.16.200.111:8081/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>nexus-snapshots</id>
			<name>snapshots</name>
			<url>http://172.16.200.111:8081/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
